--- a/templates/template_1.html
+++ b/templates/template_1.html
@@ -11,9 +11,9 @@
       <nav>
         <ul>
           <li><a href="index0.html">Home</a></li>
-          <li><a href="index1.html">artikel 2</a></li>
-          <li><a href="index2.html">artikel 3</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="index1.html">Artikel 2</a></li>
+          <li><a href="index2.html">Artikel 3</a></li>
+          <li><a href="indexabout.html">About</a></li>
         </ul>
       </nav>
     </header>
