--- a/templates/template_2.html
+++ b/templates/template_2.html
@@ -8,6 +8,13 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+          <li><a href="index0.html">Home</a></li>
+        </ul>
+      </nav>
+    </header>
     {{article}}
     {{author}}
 </body>
